``` Refactor code structure for improved readability and maintainability ```

--- a/code/index.html
+++ b/code/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wanderwise | Travel Smarter</title>
+    <meta name="description" content="Wanderwise helps you travel smarter with seamless booking services and expert budget planning.">
+    <meta name="keywords" content="travel, booking, budget planning, destinations, reviews">
+
     <link rel="stylesheet" href="index.css">
 </head>
 
@@ -22,7 +25,8 @@
     <section id="home">
         <div class="overlay"></div>
         <div class="logo-container">
-            <a href="#home" class="logo"><img src="assets/logo.png" alt="Wanderwise Logo"></a>
+            <a href="#home" class="logo"><img src="assets/logo.png" alt="Wanderwise Logo - Your travel companion"></a>
+
         </div>
         <div class="content-wrapper">
             <div class="hero">
