--- a/code/login.html
+++ b/code/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wanderwise - Login</title>
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="login.css">
+
     <link rel="preload" href="fonts/Satoshi_Complete/Fonts/OTF/Satoshi-Light.otf" as="font" type="font/otf" crossorigin>
     <link rel="preload" href="fonts/Satoshi_Complete/Fonts/OTF/Satoshi-Bold.otf" as="font" type="font/otf" crossorigin>
 </head>
