--- a/Frontend/html/planning.html
+++ b/Frontend/html/planning.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>India Trip Planner</title>
-    <link rel="stylesheet" href="planning.css">
+    <link rel="stylesheet" href="../css/planning.css">
 </head>
 <body>
     <!-- Authentication Container -->
@@ -129,6 +129,6 @@
         </div>
     </div>
 
-    <script src="planning.js"></script>
+    <script src="../js/planning.js"></script>
 </body>
 </html>
