--- a/Frontend/html/planning.html
+++ b/Frontend/html/planning.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>India Trip Planner</title>
     <link rel="stylesheet" href="../css/planning.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Hero Section with Trip Planning Form -->
@@ -17,6 +20,7 @@
                     <p class="subtitle">Plan your perfect Indian adventure</p>
                     <form id="tripForm" class="signup-form">
                         <div class="input-container">
+                            <label for="destination" class="sr-only">Destination</label>
                             <select id="destination" class="input" required>
                                 <option value="">Select a destination</option>
                                 <option value="delhi">Delhi</option>
@@ -32,12 +36,14 @@
                             </select>
                         </div>
                         <div class="input-container">
+                            <label for="days" class="sr-only">Number of Days</label>
                             <input type="number" id="days" min="1" max="30" class="input" placeholder="Number of Days" required>
                         </div>
                         <div class="input-container">
+                            <label for="budget" class="sr-only">Budget</label>
                             <input type="number" id="budget" min="1000" class="input" placeholder="Budget (INR)" required>
                         </div>
-                        <button type="submit" class="submit-btn" id="planButton">Go</button>
+                        <button type="submit" class="submit-btn" id="planButton">Plan My Trip</button>
                     </form>
                 </div>
             </div>
@@ -68,8 +74,10 @@
                         <div id="places-to-visit" class="options-grid"></div>
                     </div>
                     
-                    <button id="saveItineraryBtn" class="submit-btn">Save Itinerary</button>
-                    <button id="newSearchBtn" class="secondary-btn">New Search</button>
+                    <div class="buttons-container">
+                        <button id="saveItineraryBtn" class="submit-btn">Save Itinerary</button>
+                        <button id="newSearchBtn" class="secondary-btn">New Search</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -77,7 +85,7 @@
     
     <!-- Popular Packages Section -->
     <div id="packages-container" class="packages-container">
-        <h2 class="title">Popular Travel Packages</h2>
+        <h2 class="section-title">Popular Travel Packages</h2>
         <div class="packages-grid" id="packages-grid">
             <!-- Packages will be populated by JavaScript -->
         </div>
@@ -85,10 +93,13 @@
 
     <footer>
         <div class="footer-content">
+            <div class="footer-logo">
+                <h3>India Trip Planner</h3>
+            </div>
             <div class="socials">
-                <img src="../assets/facebook.png" alt="Facebook">
-                <img src="../assets/twitter.png" alt="Twitter">
-                <img src="../assets/instagram.png" alt="Instagram">
+                <a href="#" aria-label="Facebook"><img src="../assets/facebook.png" alt="Facebook"></a>
+                <a href="#" aria-label="Twitter"><img src="../assets/twitter.png" alt="Twitter"></a>
+                <a href="#" aria-label="Instagram"><img src="../assets/instagram.png" alt="Instagram"></a>
             </div>
             <p class="copyright">© 2025 India Trip Planner | All Rights Reserved</p>
         </div>
