--- a/Frontend/html/index.html
+++ b/Frontend/html/index.html
@@ -84,8 +84,8 @@
                     </div>
                     <div class="member-info">
                         <h3>Mohammad Tanveer</h3>
-                        <p class="role">Backend </p>
-                        <p class="bio">.</p>
+                        <p class="role">Project Idea</p>
+                        <p class="bio">Responsible for conceptualizing and initiating innovative project ideas, he identifies real-world problems and proposes creative, tech-driven solutions. His role sets the foundation for the team to build meaningful, impactful web applications.</p>
                     </div>
                 </div>
 
@@ -117,22 +117,16 @@
                     </div>
                     <div class="member-info">
                         <h3>Srushti Rawal</h3>
-                        <p class="role">Frontend</p>
-                        <p class="bio">Creating intuitive and beautiful interfaces with user experience at the forefront
-                            of every decision.</p>
+                        <p class="role">Full-Stack</p>
+                        <p class="bio">Handled every layer of the project architecture—frontend design, backend logic, database management, and API integration. Ensured smooth functionality across all components, creating a seamless and responsive experience for users. A complete end-to-end execution of the vision.</p>
                     </div>
                 </div>
             </div>
 
             <div class="project-description">
                 <h2>Our Work</h2>
-                <p>This project represents months of collaborative effort and dedication. We've combined our technical
-                    expertise and creative vision to deliver a solution that not only meets but exceeds expectations.
-                    From concept to execution, every element has been carefully crafted with attention to detail and
-                    user experience in mind.</p>
-                <p>Our team has worked tirelessly to ensure functionality, performance, and aesthetic appeal coexist
-                    harmoniously. We believe in creating digital experiences that leave lasting impressions while
-                    solving real problems.</p>
+                <p>WanderWise is a comprehensive web application designed to help travelers plan personalized trips across India based on their preferences, budget constraints, and available time. The platform provides intelligent recommendations for destinations, accommodations, transportation options, and attractions, creating a custom itinerary that optimizes the travel experience while respecting budget limitations.</p>
+                
             </div>
         </div>
     </section>
@@ -186,23 +180,21 @@
                 <div class="box-top">
                     <!--name-and-username-->
                     <div class="name-user">
-                        <strong>Touseeq Ijaz</strong>
+                        <strong>Sandeep M. from Bangalore</strong>
                     </div>
                     <!--reviews------>
                     <div class="reviews">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                        <span class="rating-value">4.0</span>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="far fa-star">⭐</i>
+                        <span class="rating-value"></span>
                     </div>
                 </div>
                 <!--Comments---------------------------------------->
                 <div class="client-comment">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quaerat quis? Provident
-                        temporibus architecto asperiores nobis maiores nisi a. Quae doloribus ipsum aliquam tenetur
-                        voluptates incidunt.</p>
+                    <p>I used India Trip Planner for my family vacation to Kerala and was blown away by how easy it made everything! The budget recommendations were spot on, and all the suggested attractions were perfect for my kids. The accommodation options they provided saved us at least ₹5000 compared to what I found elsewhere. Will definitely use this for our Shimla trip next year!</p>
                 </div>
             </div>
             <!--BOX-2-------------->
@@ -211,23 +203,22 @@
                 <div class="box-top">
 
                     <div class="name-user">
-                        <strong>J.K Rowling</strong>
+                        <strong>Priya K. from London</strong>
             
                     </div>
                     <!--reviews------>
                     <div class="reviews">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <span class="rating-value">5.0</span>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star">⭐</i>
+                        <span class="rating-value"></span>
                     </div>
                 </div>
                 <!--Comments---------------------------------------->
                 <div class="client-comment">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quaerat quis? Provident
-                        temporibus architecto asperiores nobis maiores nisi a. Quae doloribus ipsum aliquam tenetur.</p>
+                    <p>As an NRI planning to visit my homeland after 5 years, I was overwhelmed by all the changes. India Trip Planner was a lifesaver! Their Golden Triangle package was perfectly customized for my budget, and the day-by-day itinerary made sure I didn't miss anything important. The local transport suggestions were especially helpful since I wasn't familiar with all the new metro systems. Highly recommend!</p>
                 </div>
             </div>
             <!--BOX-3-------------->
@@ -236,23 +227,21 @@
                 <div class="box-top">
                     <!--name-and-username-->
                     <div class="name-user">
-                        <strong>Harry Potter</strong>
+                        <strong>Meera S. from Mumbai</strong>
                     </div>
                     <!--reviews------>
                     <div class="reviews">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star">⭐</i>
                         <i class="far fa-star"></i>
-                        <span class="rating-value">4.0</span>
+                        <span class="rating-value"></span>
                     </div>
                 </div>
                 <!--Comments---------------------------------------->
                 <div class="client-comment">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quaerat quis? Provident
-                        temporibus architecto asperiores nobis maiores nisi a. Quae doloribus ipsum aliquam tenetur
-                        voluptates.</p>
+                    <p>I'm usually skeptical of travel planning websites, but India Trip Planner really impressed me. Used it for a quick weekend trip to Manali and the budget breakdown was incredibly accurate. The accommodation options they suggested were much better than what I found on other platforms. My only suggestion would be to add more off-beat destinations. Otherwise, perfectly executed website!</p>
                 </div>
             </div>
 
@@ -261,24 +250,22 @@
                 <div class="box-top">
 
                     <div class="name-user">
-                        <strong>Olivia Johnson</strong>
+                        <strong>Raj P. from Chicago</strong>
 
                     </div>
                     <!--reviews------>
                     <div class="reviews">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                        <span class="rating-value">4.5</span>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star-half-alt">⭐</i>
+                        <span class="rating-value"></span>
                     </div>
                 </div>
                 <!--Comments---------------------------------------->
                 <div class="client-comment">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident temporibus architecto
-                        asperiores nobis maiores nisi a. Quae doloribus ipsum aliquam tenetur voluptates incidunt
-                        blanditiis sed atque.</p>
+                    <p>This is the third time I've used India Trip Planner for my annual trip home, and it keeps getting better! The new feature that shows transportation options within budget constraints is genius. For my recent Rajasthan trip, the site recommended a heritage haveli in Jaipur that wasn't on any major booking sites, and it turned out to be the highlight of our journey. The user interface is clean and responsive, and the itinerary save feature makes it easy to share plans with family members. Can't imagine planning an India trip without this tool now!</p>
                 </div>
             </div>
             <!--BOX-5-------------->
@@ -287,24 +274,22 @@
                 <div class="box-top">
                     <!--name-and-username-->
                     <div class="name-user">
-                        <strong>Michael Chen</strong>
-                        <span>@mchen42</span>
+                        <strong>Aisha D. from Dubai</strong>
+
                     </div>
                     <!--reviews------>
                     <div class="reviews">
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <span class="rating-value">5.0</span>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star">⭐</i>
+                        <i class="fas fa-star">⭐</i>
+
                     </div>
                 </div>
                 <!--Comments---------------------------------------->
                 <div class="client-comment">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quaerat quis? Provident
-                        temporibus architecto asperiores nobis maiores nisi a. Quae doloribus ipsum aliquam tenetur
-                        voluptates.</p>
+                    <p>As someone with Indian heritage but limited travel experience in India, this website was exactly what I needed! The budget calculator helped me plan a luxurious yet affordable 2-week journey through Mumbai and Goa. The accommodation suggestions were spot-on for someone looking for modern amenities with authentic Indian charm. What really impressed me was how accurately the site estimated local transportation costs - no surprises during my trip! The saved itinerary feature was perfect for sharing with my parents who joined us halfway through. This is now my go-to recommendation for anyone planning an India trip.</p>
                 </div>
             </div>
         </div>
