--- a/Frontend/html/planning.html
+++ b/Frontend/html/planning.html
@@ -93,15 +93,14 @@
 
     <footer>
         <div class="footer-content">
-            <div class="footer-logo">
-                <h3>India Trip Planner</h3>
-            </div>
             <div class="socials">
-                <a href="#" aria-label="Facebook"><img src="../assets/facebook.png" alt="Facebook"></a>
-                <a href="#" aria-label="Twitter"><img src="../assets/twitter.png" alt="Twitter"></a>
-                <a href="#" aria-label="Instagram"><img src="../assets/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/"><img src="../assets/mail.png" alt="Facebook"></a>
+                <a href="https://www.twitter.com/"><img src="../assets/x-modified.png" alt="Twitter"></a>
+                <a href="https://www.instagram.com/"><img src="../assets/ig.png" alt="Instagram"></a>
             </div>
-            <p class="copyright">© 2025 India Trip Planner | All Rights Reserved</p>
+            <span class="copyright">
+                &copy; 2025 Wanderwise | All Rights Reserved
+            </span>
         </div>
     </footer>
 
