--- a/Frontend/html/index.html
+++ b/Frontend/html/index.html
@@ -295,7 +295,7 @@
         </div>
 
         <div class="review-button">
-            <a href="review.html">Leave us a review!</a>
+            <a href="login.html">Leave us a review!</a>
         </div>
     </section>
 
